change sso to dev

--- a/.env.development
+++ b/.env.development
@@ -5,11 +5,11 @@ SKIP_PREFLIGHT_CHECK=true
 REACT_APP_PUBLIC_PATH="https://api.profile.dadehkavdehghan.ir"
 REACT_APP_SABAK_PATH="https://dev.api.sabakorg.ir"
 
-Port = 3002
+Port = 3000
 
 REACT_APP_AUTHORITY="https://sso.dev.sabak.org/"
-REACT_APP_CLIENT_ID="localhost:3002"
-REACT_APP_REDIRECT_URI="https://localhost:3002/signin-oidc"
+REACT_APP_CLIENT_ID="demo_interactive"
+REACT_APP_REDIRECT_URI="https://localhost:3000/signin-oidc"
 REACT_APP_RESPONSE_TYPE="code"
 REACT_APP_SCOPE="openid profile api1 role offline_access"
-REACT_APP_POST_LOGOUT_REDIRECT_URI="https://localhost:3002/Register/"
+REACT_APP_POST_LOGOUT_REDIRECT_URI="https://localhost:3000/Register/"
